fix(Field): icon position when label align is top

--- a/packages/vant/src/field/index.less
+++ b/packages/vant/src/field/index.less
@@ -41,6 +41,7 @@
     }
 
     &--top {
+      display: flex;
       width: 100%;
       text-align: left;
     }
